tests/machine/x/c/map_index.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_index.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_index.c:49:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   49 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_index.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_index.c:50:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   50 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_index.c:28:51: note: expected ‘int’ but argument is of type ‘char *’
   28 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_index.c:51:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   51 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_index.c:52:19: error: request for member ‘data’ in something not a structure or union
   52 |   printf("%d\n", m.data["b"]);
      |                   ^

   1: #include <stdio.h>
